--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body{
     font-family: Arial;
     background-color: #504c3df0;
-    padding: 5px;
     color: white;
 }
 h1{
@@ -39,7 +38,7 @@ li span{
 .sad{
     width: 50%;
 }
-.sad img, .happy img{
+.sad img{
     width: 75%;
     height: auto;
 }
